--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@ant-design/icons": "^5.5.1",
-    "antd": "^5.21.5",
+    "@ant-design/x": "^2.1.0",
+    "antd": "6",
     "dayjs": "^1.11.9",
     "node-notifier": "^10.0.1",
     "react-device-detect": "^2.2.3",
@@ -31,9 +32,9 @@
     "@types/react-dom": "^18.2.7",
     "@umijs/plugins": "^4.0.81",
     "cross-env": "^7.0.3",
-    "ssh2-sftp-client": "^12.0.1",
     "electron": "^38.2.1",
     "electron-builder": "^26.0.12",
+    "ssh2-sftp-client": "^12.0.1",
     "typescript": "^5.2.2",
     "umi-plugin-electron-builder": "^4.0.8",
     "umi-request": "^1.4.0"
