--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "@vis.gl/react-google-maps": "^1.4.0",
     "@ant-design/icons": "^5.5.1",
     "@ant-design/x": "^2.1.0",
     "antd": "6",
